# gitlab_sync

./: .gitignore  README.md  flake.nix  gitlab_repos.py  main.py  pyproject.toml  release.sh  run_tool.sh
assets/: __init__.py  get_lsps.py  get_nvim_plugins.py  parsers.json  tree_sitter_lua_to_json.lua
src/git_sync/: arg_parse.py  main.py
src/git_sync/assets/: __init__.py  get_binaries.py  get_lsps.py  get_nvim_plugins.py  tree_sitter_lua_to_json.lua
test/: test_fileshare.sh
