[project]
name = "git-sync"
version = "0.1.0"
description = "Download and sync development tools including neovim plugins, LSPs, and tree-sitter parsers"
readme = "README.md"
requires-python=">=3.10"
dependencies = []


[project.scripts]
git-sync = "git_sync.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
